--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@ body
 <p>I am making creative and experimental game prototypes! Here is the list of them:
 
 <ol>
-<li><a href="coming-soon">Digital Assignment 1</a></li>
+<li><a href="https://atran123.github.io/cs325-game-prototypes/digital1">Digital Assignment 1</a></li>
 </ol>
 
+<ol>
+<li><a href="https://atran123.github.io/cs325-game-prototypes/digital1">Digital Assignment 2</a></li>
+</ol>
 
 <p>Here are the templates:
 
