--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@ body
 <li><a href="https://atran123.github.io/cs325-game-prototypes/digital2">Digital Assignment 2</a></li>
 </ol>
 
+<ol>
+<li><a href="https://atran123.github.io/cs325-game-prototypes/digital3">Digital Assignment 3</a></li>
+</ol>
+    
 <p>Here are the templates:
 
 <ul>
