--- a/digital3/index.html
+++ b/digital3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Digital 1</title>
+    <title>Digital 3</title>
     <script src="js/phaser.js"></script>
     <script src="js/main.js"></script>
 
@@ -22,27 +22,41 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Click! Click!</h2>
+<h2>Don't Get Caught by The Phaser Dude!</h2>
 <ul>
 
+<li><strong>Originality:</strong>
+Design for fast mouse clicking skill. I don't think there's a similar game yet.
+</li>
+
+<li><strong>Technical Merit:</strong>
+uses the Arcade Physics engine to create sprites which can bounce off of each other, bounce off the wall, and have gravity.
+</li>
+
 <li><strong>High Concept:</strong>
-Testing mouse click input.
+Fast reflex clicking the mouse.
 </li>
 
 <li><strong>Theme:</strong>
-Theme: Testing.
+Theme: Caught.
 </li>
 
 <li><strong>Mandated Variety:</strong>
-Input: Mouse.
+Input: Mouse. Randomness: None. Play style: Single
+player, arcade.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-Test out mouse input.
+Have fun.
 </li>
 
 <li><strong>Gameplay:</strong>
-Click the red hexagon to have it start moving. Try to click in the middle of if to stop it. If click is not exactly in the middle, it will change direction.
+Click on the blue ball to bounce it. Physics applied here. Clicking on the bottom of the ball will make it fly up.
+Clicking on the top of the ball will make it fall down faster. Clicking on the left of the ball will make it fly to the right.
+Clicking on the right of the ball will make it fly to the left. 
+Do not let the Phaser dude catch it, if he does, you lose.  If he cannot catch you in 30 seconds, you win.
+If you are fast enough, you can keep the ball from ever falling down to the ground. 
+The Phaser dude's speed will progressively increase as the game progress.
 </li>
 
 <li><strong>Target Audience:</strong>
@@ -50,15 +64,20 @@ Everyone.
 </li>
 
 <li><strong>Play Time:</strong>
-Minimum 1 second.
+Maximum 30 seconds.
 </li>
 
 <li><strong>Strategies:</strong>
-Try to click accurately.
+Try to click fast to keep the ball from falling down.
 </li>
 
-<li><strong>Prototype Closest Other Game:</strong>
-Borrow code here: https://phaser.io/examples/v2/arcade-physics/move-to-pointer, but added click to stop feature.
+<li><strong>Prototype Closest Other Game:</strong> 
+<li><a href="https://phaser.io/examples/v2/arcade-physics/bounce-accelerator">Bounce Accelerator</a></li>
+<li><a href="http://phaser.io/tutorials/making-your-first-phaser-2-game/index">Making your first Phaser 2 game</a></li>
+<li><a href="https://phaser.io/examples/v2/time/custom-timer">Custom Timer</a></li>
+<li><a href="https://www.google.com/search?q=stone+ledge&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjir6LOtLnZAhUEON8KHSUkCNQQ_AUICigB&biw=1289&bih=736#imgrc=FxSFIawxSGd3YM:">Ground</a></li>
+<li><a href="https://www.google.com/search?biw=1289&bih=692&tbm=isch&sa=1&ei=RlyOWqeBDs_q_Abavpa4BA&q=ball+transparent+background&oq=ball+transparent+background&gs_l=psy-ab.3..0j0i7i30k1l2j0i7i10i30k1j0i7i30k1l6.64008.64679.0.65390.4.4.0.0.0.0.67.241.4.4.0....0...1c.1.64.psy-ab..0.4.240...0i13k1.0.selKDXuMCME#imgrc=Pm0E5d4mQQGkrM:">Ball</a></li>
+<li><a href="http://www.psdgraphics.com/file/stars.jpg">Night Sky</a></li>
 </li>
 
 </ul>
