--- a/digital3/index.html
+++ b/digital3/index.html
@@ -30,7 +30,11 @@ Design for fast mouse clicking skill. I don't think there's a similar game yet.
 </li>
 
 <li><strong>Technical Merit:</strong>
-uses the Arcade Physics engine to create sprites which can bounce off of each other, bounce off the wall, and have gravity.
+Uses the Arcade Physics engine to create sprites which can bounce off of each other, bounce off the wall, and have gravity.
+</li>
+
+<li><strong>Prototype Postmortem:</strong>
+I still cannot change the music between game play and victory/game over. The game music just stops and the victory or game over music won't play.
 </li>
 
 <li><strong>High Concept:</strong>
@@ -75,9 +79,10 @@ Try to click fast to keep the ball from falling down.
 <li><a href="https://phaser.io/examples/v2/arcade-physics/bounce-accelerator">Bounce Accelerator</a></li>
 <li><a href="http://phaser.io/tutorials/making-your-first-phaser-2-game/index">Making your first Phaser 2 game</a></li>
 <li><a href="https://phaser.io/examples/v2/time/custom-timer">Custom Timer</a></li>
-<li><a href="https://www.google.com/search?q=stone+ledge&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjir6LOtLnZAhUEON8KHSUkCNQQ_AUICigB&biw=1289&bih=736#imgrc=FxSFIawxSGd3YM:">Ground</a></li>
-<li><a href="https://www.google.com/search?biw=1289&bih=692&tbm=isch&sa=1&ei=RlyOWqeBDs_q_Abavpa4BA&q=ball+transparent+background&oq=ball+transparent+background&gs_l=psy-ab.3..0j0i7i30k1l2j0i7i10i30k1j0i7i30k1l6.64008.64679.0.65390.4.4.0.0.0.0.67.241.4.4.0....0...1c.1.64.psy-ab..0.4.240...0i13k1.0.selKDXuMCME#imgrc=Pm0E5d4mQQGkrM:">Ball</a></li>
-<li><a href="http://www.psdgraphics.com/file/stars.jpg">Night Sky</a></li>
+<li><a href="https://www.google.com/search?q=stone+ledge&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjir6LOtLnZAhUEON8KHSUkCNQQ_AUICigB&biw=1289&bih=736#imgrc=FxSFIawxSGd3YM:">Ground Sprite</a></li>
+<li><a href="https://www.google.com/search?biw=1289&bih=692&tbm=isch&sa=1&ei=RlyOWqeBDs_q_Abavpa4BA&q=ball+transparent+background&oq=ball+transparent+background&gs_l=psy-ab.3..0j0i7i30k1l2j0i7i10i30k1j0i7i30k1l6.64008.64679.0.65390.4.4.0.0.0.0.67.241.4.4.0....0...1c.1.64.psy-ab..0.4.240...0i13k1.0.selKDXuMCME#imgrc=Pm0E5d4mQQGkrM:">Ball Sprite</a></li>
+<li><a href="http://www.psdgraphics.com/file/stars.jpg">Night Sky background</a></li>
+<li><a href="http://www.mariomayhem.com/downloads/sound_tracks/super_mario_bros_1_soundtrack.php">Super Mario Bros Soundtrack</a></li>
 </li>
 
 </ul>
