--- a/digital3/index.html
+++ b/digital3/index.html
@@ -42,7 +42,7 @@ Fast reflex clicking the mouse.
 </li>
 
 <li><strong>Theme:</strong>
-Theme: Caught.
+Caught.
 </li>
 
 <li><strong>Mandated Variety:</strong>
