--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@ body
 <p>I am making creative and experimental game prototypes! Here is the list of them:
 
 <ol>
-<li><a href="https://atran123.github.io/cs325-game-prototypes/digital1">Digital Assignment 1</a></li>
-<li><a href="https://atran123.github.io/cs325-game-prototypes/digital2">Digital Assignment 2</a></li>
-<li><a href="https://atran123.github.io/cs325-game-prototypes/digital3">Digital Assignment 3</a></li>
+    <li><a href="https://atran123.github.io/cs325-game-prototypes/digital1">Digital Assignment 1</a></li>
+    <li><a href="https://atran123.github.io/cs325-game-prototypes/digital2">Digital Assignment 2</a></li>
+    <li><a href="https://atran123.github.io/cs325-game-prototypes/digital3">Digital Assignment 3</a></li>
+    <li><a href="https://atran123.github.io/cs325-game-prototypes/digital4">Digital Assignment 4: Reiterate Assignment 2</a></li>
 </ol>
     
 <p>Here are the templates:
