--- a/digital4/index.html
+++ b/digital4/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>CS325 Game Prototypes</title>
+    <title>Digital 4</title>
+    <script src="js/phaser.js"></script>
+    <script src="js/main.js"></script>
 
 <style>
 body
@@ -18,17 +20,56 @@ body
 
 </head>
 <body>
+<div id="game"></div>
+<div id="readme">
+<h2>Shoot the Chickens!</h2>
+<ul>
 
-<h1>CS 325 Game Prototypes</h1>
+<li><strong>High Concept:</strong>
+"Duck Hunt" style game. Shoot the flying chickens with mouse click or touch.
+</li>
 
-<p>I am making creative and experimental game prototypes! Here is the list of them:
+<li><strong>Theme:</strong>
+Chicken.
+</li>
 
-<ol>
-<li><a href="http://localhost:8000/digital1">Digital Assignment 1</a></li>
-<li><a href="http://localhost:8000/digital2">Digital Assignment 2</a></li>
-<li><a href="http://localhost:8000/digital3">Digital Assignment 3</a></li>
-<li><a href="http://localhost:8000/digital4">Digital Assignment 4: Reiterate Assignment 2</a></li>
-</ol>
+<li><strong>Mandated Variety:</strong>
+Input: Mouse, or touch. Randomness: chickens (sprites) position, speed. Play style: Single
+player, arcade.
+</li>
 
+<li><strong>Player Experience Goals:</strong>
+Have fun?
+</li>
+
+<li><strong>Gameplay:</strong>
+As the chickens are flying across the screen, the player will attempt to shoot them down by clicking on them or touching on them.
+</li>
+
+<li><strong>Target Audience:</strong>
+All.
+</li>
+
+<li><strong>Play Time:</strong>
+1-2 minutes.
+</li>
+
+<li><strong>Strategies:</strong>
+Fast response and judgement.
+</li>
+
+<li><strong>Prototype Assets:</strong>
+Borrowed from the internet. Sources: google.
+<ul>
+<li>Button: Phaser example <a href="https://phaser.io/examples/v2/buttons/action-on-click">Action On Click</a></li>
+<li>Music:  Space Invaders soundtrack <a href="https://downloads.khinsider.com/game-soundtracks/album/space-invaders-gbc-gb">Super Mario Bros</a></li>
+</ul>
+</li>
+
+<ul>
+</ul>
+</li>
+</ul>
+</div>
 </body>
 </html>
