--- a/digital4/index.html
+++ b/digital4/index.html
@@ -51,7 +51,7 @@ All.
 </li>
 
 <li><strong>Play Time:</strong>
-1-2 minutes.
+1 minute.
 </li>
 
 <li><strong>Strategies:</strong>
@@ -62,7 +62,12 @@ Fast response and judgement.
 Borrowed from the internet. Sources: google.
 <ul>
 <li>Button: Phaser example <a href="https://phaser.io/examples/v2/buttons/action-on-click">Action On Click</a></li>
-<li>Music:  Space Invaders soundtrack <a href="https://downloads.khinsider.com/game-soundtracks/album/space-invaders-gbc-gb">Super Mario Bros</a></li>
+<li>Music:  Space Invaders soundtrack <a href="https://downloads.khinsider.com/game-soundtracks/album/space-invaders-gbc-gb">Space Invader</a></li>
+<li>Music: <a href="http://www.findsounds.com/ISAPI/search.dll?keywords=chicken">Squawk</a></li>
+<li>Music: <a href="http://incompetech.com/music/royalty-free/index.html?isrc=USUAN1300032">River Valley Breakdown</a></li>
+<li>Sprite Sheet: <a href="https://www.google.com/search?biw=1231&bih=736&tbm=isch&sa=1&ei=5O2XWvudNvDp_QbSzL-wDw&q=chicken-300x300.png+sprite+sheet&oq=chicken-300x300.png+sprite+sheet&gs_l=psy-ab.3...13649.16143.0.16399.13.13.0.0.0.0.83.760.13.13.0....0...1c.1.64.psy-ab..0.0.0....0.OEwgXirrJeQ#imgrc=IZV-8iPQ77iSDM:">Chicken</a></li>
+<li>Background: <a href="https://www.google.com/search?biw=1231&bih=736&tbm=isch&sa=1&ei=PO6XWt2LK-ON_Qaoo5pg&q=1867417.jpg&oq=1867417.jpg&gs_l=psy-ab.3...123042.123772.0.124109.5.4.0.0.0.0.81.182.3.4.0....0...1c.1j2.64.psy-ab..2.1.80.0..0j0i67k1.92.kNAbZhwLL5Y#imgrc=d5LMqJIcUXx5WM:">Farm</a></li>
+
 </ul>
 </li>
 
