--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ body
     <li><a href="https://atran123.github.io/cs325-game-prototypes/digital2">Digital Assignment 2</a></li>
     <li><a href="https://atran123.github.io/cs325-game-prototypes/digital3">Digital Assignment 3</a></li>
     <li><a href="https://atran123.github.io/cs325-game-prototypes/digital4">Digital Assignment 4: Reiterate Assignment 2</a></li>
+    <li><a href="https://atran123.github.io/cs325-game-prototypes/digital5">Digital Assignment 5</a></li>
 </ol>
     
 <p>Here are the templates:
