--- a/index.html
+++ b/index.html
@@ -24,22 +24,13 @@ body
 <p>I am making creative and experimental game prototypes! Here is the list of them:
 
 <ol>
-    <li><a href="https://atran123.github.io/cs325-game-prototypes/digital1">Digital Assignment 1</a></li>
-    <li><a href="https://atran123.github.io/cs325-game-prototypes/digital2">Digital Assignment 2</a></li>
-    <li><a href="https://atran123.github.io/cs325-game-prototypes/digital3">Digital Assignment 3</a></li>
-    <li><a href="https://atran123.github.io/cs325-game-prototypes/digital4">Digital Assignment 4: Reiterate Assignment 2</a></li>
-    <li><a href="https://atran123.github.io/cs325-game-prototypes/digital5">Digital Assignment 5</a></li>
+<li><a href="http://localhost:8000/digital1">Digital Assignment 1</a></li>
+<li><a href="http://localhost:8000/digital2">Digital Assignment 2</a></li>
+<li><a href="http://localhost:8000/digital3">Digital Assignment 3</a></li>
+<li><a href="http://localhost:8000/digital4">Digital Assignment 4: Reiterate Assignment 2</a></li>
+<li><a href="http://localhost:8000/digital5">Digital Assignment 5</a></li>
+<li><a href="http://localhost:8000/sequence1a">Sequence 1 Digital Prototype</a></li>
 </ol>
-    
-<p>Here are the templates:
-
-<ul>
-<li><a href="template-minimal">A minimal template</a></li>
-<li><a href="template-minimal-gamestate">A minimal template that uses game states</a></li>
-<li><a href="template-tilemap">A minimal template using tile maps</a></li>
-<li><a href="template-gamestate-functional">A template with multiple game states (loading screen, main menu)</a></li>
-<li><a href="template-gamestate">A template with multiple game states in a different style</a></li>
-</ul>
 
 </body>
 </html>
