--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ body
     <li><a href="https://atran123.github.io/cs325-game-prototypes/digital5">Digital Assignment 5</a></li>
     <li><a href="https://atran123.github.io/cs325-game-prototypes/sequence1a">Digital Prototype 6 (Sequence 1)</a></li>
     <li><a href="https://atran123.github.io/cs325-game-prototypes/sequence1b">Digital Prototype 7 (Sequence 1)</a></li>
+    <li><a href="https://atran123.github.io/cs325-game-prototypes/sequence2a">Digital Prototype 8 (Sequence 2)</a></li>
 </ol>
     
 </body>
